feat: Implement complaint filing feature with media uploads to Cloudinary
- Added Cloudinary configuration for media uploads.
- Created complaint model with comprehensive fields including media, location, and user details.
- Developed complaint controller to handle filing complaints with validation and media uploads.
- Introduced routes for complaint filing with multer for file handling.
- Enhanced frontend authentication with new UI components for login and signup.
- Integrated email verification functionality with user feedback.
- Established global API handling with axios for authentication and error management.
- Utilized Zustand for state management in user authentication flow.

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.2",
@@ -24,6 +25,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
